# jpegmt

./: Libs.pri  README.md  jpeg.pro
.github/workflows/: build.yml
lib/Jpeg/: CMakeLists.txt  Jpeg.pro
lib/Jpeg/include/Jpeg/: JpegImageMetaData.h  JpegWriter.h  Rgb.h
lib/Jpeg/src/: JpegWriter.cpp
lib/Jpeg/src/Encoder/: Common.h  JpegEncoder.cpp  JpegEncoderBuffer.cpp  JpegHuffmanEncoder.cpp
lib/Jpeg/src/Encoder/EncoderBuffer/: JpegEncoderBuffer.cpp  JpegEncoderBuffer.h  JpegEncoderBufferInt16x16.cpp  JpegEncoderBufferInt16x8.cpp  JpegEncoderBufferInt32x4.cpp  JpegEncoderBufferInt32x8.cpp  JpegEncoderBufferTemplates.h  RgbToYcc.h
lib/Jpeg/src/Encoder/ForwardDct/: JpegForwardDct.cpp
lib/Jpeg/src/Encoder/HuffmanEncoder/: JpegHuffmanEncoderInt16x16.cpp  JpegHuffmanEncoderInt16x8.cpp  JpegHuffmanEncoderTemplates.h
test/src/: Image.cpp  main.cpp
